fix(phase1): 修复 review 反馈的问题
修复 WorkbenchSummaryService：
- 移除对不存在的 automation_job 表的查询，Phase 1 仅返回 pendingTasks=0
- countSince 改传 OffsetDateTime，避免与 timestamptz 字符串比较
- 注入 Clock 便于测试
- 为公开构造器加 @Autowired，避免 Spring 在多构造器情况下无法决定

修复 PlatformModule：
- canonical constructor 加入 moduleId/name/version 必填校验和默认 healthStatus/configJson

修复测试：
- AuditServiceTest：去掉 wildcard import，补齐 verify 第 8 个 any() 占位符
- PlatformModuleDomainTest：去掉 unusedImports，加 blankModuleId_shouldBeRejected 用例
- PlatformModuleServiceTest：去掉 wildcard import

修复迁移与 jOOQ 白名单：
- V0007 删除无用的 sys_audit_log 表（AuditService 实际写入 audit_log）
- jooq-codegen.xml includes 同步移除 sys_audit_log

修复前端：
- DashboardPage.tsx 去掉未使用的 DatabaseIcon import

Co-authored-by: Cursor <cursoragent@cursor.com>